Добавлены метод  для сервиса SmsHub.org: Получить баланс Получить номер статус Изменить статус Проверить статус - метод который возвращает уже пришедшее сообщение. Использует "Получить статус" Получить статус - получает статус Получить цены Получить номер статуса и стоимость хаба бесплатно - запрос отснифал снифером, намного лучше чем "Получить цены" Добавлено событие "Проверить ответ", проверяет ответ которые возвращает сервер Есть возможность возвращать ошибку в исключении или текстом Все запросы async

--- a/SMS Test/SMS Test.csproj
+++ b/SMS Test/SMS Test.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SMS Service\SMS Service.csproj">
+      <Project>{CCCF560A-066C-4A62-8CA3-6AC27EAAE442}</Project>
+      <Name>SMS Service</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
