--- a/SMS Service/SMS Service.csproj
+++ b/SMS Service/SMS Service.csproj
@@ -30,6 +30,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -40,14 +44,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="Enums\Info.cs" />
+    <Compile Include="Enums\Status.cs" />
+    <Compile Include="Exceptions\ErrorParamsException.cs" />
+    <Compile Include="Models\NumbersStatusAndCostHubFree.cs" />
+    <Compile Include="Models\Price.cs" />
+    <Compile Include="Models\Response.cs" />
+    <Compile Include="Models\NumberStatus.cs" />
+    <Compile Include="Other\Converts.cs" />
+    <Compile Include="Other\Json.cs" />
+    <Compile Include="Other\Request.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\SmsHub.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Enums\" />
-    <Folder Include="Models\" />
-    <Folder Include="Other\" />
-    <Folder Include="Services\" />
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
